--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "user-api",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.15.5"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,8 +15,5 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
   }
 }
